--- a/css/styleprincipal.css
+++ b/css/styleprincipal.css
@@ -205,10 +205,10 @@ body {
     color: rgba(82, 65, 65); /* Define a cor do texto */
 }
 
-.rodape_menu li a {
-    color: rgba(82, 65, 65); /* Define a cor do texto */
-    margin: 6px; /* Adiciona margem */
-    font-size: 15px; /* Define o tamanho da fonte */
+.rodape_menu li a img {
+    width: 45px;
+    height: auto;
+    margin: 8px;
 }
 
 #descricao{
